[package]
name = "rs-muni-is-api"
version = "0.1.0"
authors = ["Peter Stanko <pstanko@netsuite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
chrono = "0.4.10"

[dev-dependencies]
mockito = "0.22.0"



